# GUI_template

./: CMakeLists.txt  README.md  backend.py  compile.sh  main.cpp  mainwindow.cpp  mainwindow.h
backend/: file_processor.py
gui/: console_pane.py  detail_pane.py  file_manager_pane.py  main_window.py
utils/: config.py
